--- a/LogycaApp/res/layout/activity_splash.xml
+++ b/LogycaApp/res/layout/activity_splash.xml
@@ -1,15 +1,24 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.logyca.app.SplashActivity"
-    tools:ignore="MergeRootFrame" >
-
-    <TextView
-        android:id="@+id/textView1"
+    android:background="@drawable/splash_background" >
+<!-- 
+    <ImageView
+        android:id="@+id/imgLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Esta es la actividad" />
+        android:layout_centerInParent="true"
+        android:src="@drawable/wwe_logo" />
+-->
 
-</FrameLayout>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:gravity="center_horizontal"
+        android:text="@string/splash_legend"
+        android:textColor="@color/white"
+        android:textSize="24sp" />
+ 
+</RelativeLayout>
