--- a/Logyca/res/layout/fragment_login.xml
+++ b/Logyca/res/layout/fragment_login.xml
@@ -91,7 +91,8 @@
               android:layout_marginBottom="6dp"
               android:layout_marginTop="10dip"
               android:text="@string/btn_text_login"
-              android:textSize="20sp" />
+              android:textSize="20sp" 
+              android:onClick="selfDestruct" />
 
           <!-- Link to Registration Screen -->
 
