--- a/Logyca/res/layout/fragment_main.xml
+++ b/Logyca/res/layout/fragment_main.xml
@@ -21,7 +21,7 @@
         android:textSize="24sp" />
 
     <ImageView
-        android:id="@+id/big_logo"
+        android:id="@+id/webNFCView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/rNFCreaderTittle"
