--- a/Logyca/res/layout/fragment_login.xml
+++ b/Logyca/res/layout/fragment_login.xml
@@ -91,8 +91,8 @@
               android:layout_marginBottom="6dp"
               android:layout_marginTop="10dip"
               android:text="@string/btn_text_login"
-              android:textSize="20sp" 
-              android:onClick="selfDestruct" />
+              android:textSize="20sp"
+              android:onClick="selfDestruct"  />
 
           <!-- Link to Registration Screen -->
 
@@ -104,15 +104,17 @@
               android:text="@string/btn_text_login_facebook"
               android:textSize="20sp" />
 
-          <TextView
-              android:id="@+id/link_to_register"
+          <Button
+              android:id="@+id/btnRegister"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="40dp"
               android:layout_marginTop="10dp"
               android:gravity="center"
+              android:onClick="selfDestruct"
               android:text="@string/signup_text"
               android:textColor="@color/orange"
+              android:textColorHint="@color/light_blue"
               android:textSize="23sp" />
  
         </LinearLayout>
