--- a/Logyca/res/layout/fragment_main.xml
+++ b/Logyca/res/layout/fragment_main.xml
@@ -2,31 +2,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/orange"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.logyca.MainActivity$PlaceholderFragment" >
-
-    <TextView
-        android:id="@+id/rNFCreaderTittle"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
-        android:gravity="center_horizontal"
-        android:text="@string/splash_legend"
-        android:textColor="@color/white"
-        android:textSize="24sp" />
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.logyca.MainActivity$PlaceholderFragment">
 
     <ImageView
-        android:id="@+id/webNFCView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/rNFCreaderTittle"
+        android:id="@+id/imageView"
+        android:contentDescription="Logo logyca"
+        android:src="@drawable/logo_logyca"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="85dp"
-        android:src="@drawable/logo" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:adjustViewBounds="true" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ServicesListView"
+        android:layout_below="@+id/imageView"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
