--- a/Logyca/res/layout/fragment_servicio_descripcion.xml
+++ b/Logyca/res/layout/fragment_servicio_descripcion.xml
@@ -99,7 +99,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Duración"
+        android:text="@string/Duracion"
         android:id="@+id/duracionTv"
         android:layout_below="@+id/fechaHastaTv"
         android:layout_alignLeft="@+id/fechaHastaTv"
