GPS is obtained to contact experts
Aún falta contactar al php y enviarle el mensaje final del usuario al
contactar al experto.

--- a/Logyca/res/layout/expert_item_layout.xml
+++ b/Logyca/res/layout/expert_item_layout.xml
@@ -18,12 +18,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Titulo Estándar"
+        android:text="Nombre experto"
         android:id="@+id/tituloTv"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/imageView"
         android:textStyle="bold" />
-
+    
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,4 +31,5 @@
         android:layout_below="@+id/tituloTv"
         android:layout_toRightOf="@+id/imageView"
         android:layout_alignBottom="@+id/imageView" />
+
 </RelativeLayout>
