--- a/Logyca/res/layout/fragment_register.xml
+++ b/Logyca/res/layout/fragment_register.xml
@@ -57,22 +57,68 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:ems="10"
+                android:focusable="true"
                 android:inputType="textEmailAddress" />
 
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Large Text"
+                android:text="Nombre"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/gray" />
 
             <EditText
-                android:id="@+id/editText1"
+                android:id="@+id/reg_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:ems="10"
+                android:inputType="text" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Contraseña"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/gray" />
+
+            <EditText
+                android:id="@+id/reg_psw"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:ems="10"
+                android:inputType="textPassword" >
+
+                <requestFocus />
+            </EditText>
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Confirmar Contraseña"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/gray" />
+
+            <EditText
+                android:id="@+id/reg_psw_cnf"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:ems="10"
                 android:inputType="textPassword" />
+
+            <Button
+                android:id="@+id/btn_registrar"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Registrar"
+                android:textColor="@color/orange"
+                android:textSize="23sp" />
+
         </LinearLayout>
         <!--  Header Ends -->
 
